syntax = "proto3";
option java_package = "com.fortegrp.sync.airline";

service AirlineService {
  rpc getAirlines(GetAirlineRequest) returns (GetAirlineResponse);
}

message GetAirlineRequest {
  string airlineId = 1;

}

message GetAirlineResponse {
  repeated Airline airline = 1;
}

message Airline {
  string name = 1;
}

